# flame-graph-3d

./: README.md
rustBuild/: Cargo.toml  Trunk.toml  index.html
rustBuild/assets/: manifest.json  sw.js
rustBuild/src/: app.rs  camera.rs  main.rs
rustBuild/src/app/: app_panels.rs  app_widgets.rs  cube_painter.rs  data.rs  tree.rs  ui_helper.rs
rustBuild/src/shaders/: triangle.frag  triangle.vert
