[package]
name = "metaflame"
version = "0.1.0"
authors = ["Alex Boots <ajboots@ncsu.edu>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
glow = "0.11.2"
egui = "0.20.1"
lazy_static = "1.4.0"
egui_glow = "0.20.1"
wasm-bindgen = "0.2.83"

wasm-bindgen-futures = "0.4"
eframe = { version = "0.20.1", features = ["persistence", "glow"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
serde_json = "1.0"
traversal = "0.1.2"
cgmath = "0.18.0"
bytemuck = "1.12.1"
time = "0.3.17"
# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
